tests/expected_package_import_gate_missing_type.diag.out
<input2>:7:20: error: cross-module reference 'pkg_support::SharedNumber' requires a matching import
        public number: pkg_support::SharedNumber,
                       ^^^^^^^^^^^^^^^^^^^^^^^^^
